# mdformat-admon

./: .copier-answers.yml  .pre-commit-config.yaml  .pre-commit-test.yaml  .ruff.toml  .tool-versions  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mdformat-admon/: plugin.py
mdformat_admon/: __init__.py  _helpers.py  index_pr58.py  plugin.py
mdformat_admon/_local/mdit_py_plugins/admon/: index.py
mdformat_admon/_synced/factores/: _whitespace_admon_factories.py
mdformat_admon/factories/: __init__.py  _factories.py  _whitespace_admon_factories.py
mdformat_admon/mdit_plugins/: __init__.py  _python_markdown_admon.py
mdformat_admon/plugins/: __init__.py  _mkdocs_admon.py  mkdocs_admon.py  python_markdown_admon.py
tests/: fixtures.md  helpers.py  pre-commit-test-gh-alerts.md  pre-commit-test.md  requirements.txt  test_fixtures.py  test_mdformat.py
tests/format/: fixtures.md  test_fixtures.py  test_format.py  test_text_fixtures.py
tests/format/fixtures/: text.md
tests/render/: test_render.py
