[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdformat_admon"
authors = [
    { name = "Kyle King", email = "dev.act.kyle@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mdformat", "markdown", "markdown-it"]
requires-python = ">=3.8.0"
dependencies = [
    "mdformat >= 0.7.16",
    "mdit-py-plugins >= 0.4.0",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest >= 7.0",
    "pytest-cov",
]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/KyleKing/mdformat-admon"

[project.entry-points."mdformat.parser_extension"]
admonition = "mdformat_admon"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_admon", "tests"]

# Settings for Black compatibility
profile = "black"

[tool.pytest-watcher]
now = true
runner = "tox"
runner_args = ["-e", "py38"]
patterns = ["*.py"]
ignore_patterns = []
