[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdformat_admon"
authors = [
    { name = "Kyle King", email = "dev.act.kyle@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mdformat", "markdown", "markdown-it"]
requires-python = ">=3.8.0"
dependencies = [
    "mdformat >= 0.7.16",
    "mdit-py-plugins >= 0.4.0",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest >= 7.4.4",
    "pytest-cov >= 4.1.0",
]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/KyleKing/mdformat-admon"

[project.entry-points."mdformat.parser_extension"]
admonition = "mdformat_admon"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.pytest-watcher]
now = true
runner = "tox"
runner_args = ["-e", "py38"]
patterns = ["*.py", "*.md"]
ignore_patterns = []
